--- a/module.css
+++ b/module.css
@@ -17,24 +17,24 @@ div#help{
     background-repeat:no-repeat;
     background-position:0% 50%;
     /*background-position:left bottom;*/
-    width:70%;
-    border:2px solid #779ECB;
+    width:90%;
+    border:1px solid transparent; 
     font-weight:bold;
-    box-shadow: 10px 10px 5px #888888;
-
+    box-shadow: 2px 2px 1px #888888;
  
 }
 div#help {
     background-color: #F7F3ED;
     font-size: small;
     padding-bottom: 1em;
-    padding-top: 1.3em;
+    padding-top: 2em;
     padding-left: 5.5em;
     padding-right: 5px;
+    clear:both;
+    margin-bottom:2em;
 }
 div.helpme_count{
     float:right;
-    clear:right;
     font-weight: 400;
     font-size:7pt;
     border:1px solid #779ECB;
@@ -42,4 +42,16 @@ div.helpme_count{
     margin-top:-1em;
     margin-bottom:1.5em;
     margin-right:.3em;
+}
+#dismiss_all{
+    float:right;
+    clear:right;
+    margin-left:1em;
+    margin-top:-.8em;
+    height:1.5em;
+    width:1.5em;
+}
+#dismiss_all img{
+    height:1.5em;
+    width:1.5em;
 }
